--- a/first-page.html
+++ b/first-page.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<h1 style="color:blue">Hello World!</h1>
+		<h2>This is my table</h2>
 		<table style="width: 50%">
 			<tr>
 				<th style="border:1px solid black;">Test1</th>
