--- a/first-page.html
+++ b/first-page.html
@@ -3,25 +3,26 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>My Website</title>
+		<link rel="stylesheet" type="text/css" href="style.css"
 	</head>
 	<body>
-		<h1 style="color:blue">Hello World!</h1>
-		<h2>This is my table</h2>
+		<h1>Hello World!</h1>
+		<h2 id="table-title">This is my table</h2>
 		<table style="width: 50%">
 			<tr>
-				<th style="border:1px solid black;">Test1</th>
-				<th style="border:1px solid black;">Test2</th>
-				<th style="border:1px solid black;"></th>
+				<th class="table-headings" style="border:1px solid black;">Test1</th>
+				<th class="table-headings" style="border:1px solid black;">Test2</th>
+				<th class="table-headings" style="border:1px solid black;"></th>
 			</tr>
 			<tr>
-				<td style="border:1px solid #000;">Data1</td>
-				<td style="border:1px solid #000;">Data2</td>
-				<td style="border:1px solid #000;">Data3</td>
+				<td class="table-headings" style="border:1px solid #000;">Data1</td>
+				<td class="table-headings" style="border:1px solid #000;">Data2</td>
+				<td class="table-headings" style="border:1px solid #000;">Data3</td>
 			</tr>
 			<tr>
-				<td style="border:1px solid #000;">Data1.1</td>
-				<td style="border:1px solid #000;">Data1.2</td>
-				<td style="border:1px solid #000;">Data1.333333</td>
+				<td class="table-headings" style="border:1px solid #000;">Data1.1</td>
+				<td class="table-headings" style="border:1px solid #000;">Data1.2</td>
+				<td class="table-headings" style="border:1px solid #000;">Data1.333333</td>
 			</tr>
 		</table>
 	</body>
