Added header, body, & footer
Created the layout for the website. Also added 2 images.

--- a/first-page.html
+++ b/first-page.html
@@ -6,24 +6,41 @@
 		<link rel="stylesheet" type="text/css" href="style.css"
 	</head>
 	<body>
-		<h1>Hello World!</h1>
-		<h2 id="table-title">This is my table</h2>
-		<table style="width: 50%">
-			<tr>
-				<th class="table-headings" style="border:1px solid black;">Test1</th>
-				<th class="table-headings" style="border:1px solid black;">Test2</th>
-				<th class="table-headings" style="border:1px solid black;"></th>
-			</tr>
-			<tr>
-				<td class="table-headings" style="border:1px solid #000;">Data1</td>
-				<td class="table-headings" style="border:1px solid #000;">Data2</td>
-				<td class="table-headings" style="border:1px solid #000;">Data3</td>
-			</tr>
-			<tr>
-				<td class="table-headings" style="border:1px solid #000;">Data1.1</td>
-				<td class="table-headings" style="border:1px solid #000;">Data1.2</td>
-				<td class="table-headings" style="border:1px solid #000;">Data1.333333</td>
-			</tr>
-		</table>
+		<header>
+			<img id="iCodeLogo" src="iCode-logo.png">
+			<nav>
+				<a href="#Home" class="nav-a">Home</a>
+				<a href="#About-Me" class="nav-a">About Me</a>
+				<a href="#Gallery" class="nav-a">Gallery</a>
+				<a href="#Contact-Us" class="nav-a">Contact Us</a>
+			</nav>
+		</header>
+		<hr>
+		<div id="body-wrapper">
+			<div id="main">
+				<aside>
+				<h4>This goes to the right</h4>
+				</aside>
+				<section>
+					<h2 id="section-h2">This is my website</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum vulputate sapien in aliquet. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis in velit eget sem imperdiet gravida. Nam vestibulum porta euismod. Maecenas sit amet dui tristique, posuere sapien vitae, semper eros. In ut consectetur urna, et porttitor urna. Mauris malesuada nulla id sagittis aliquet. Nullam turpis velit, egestas sit amet sem in, pellentesque tincidunt dui. In a semper risus. Phasellus nec libero massa.
+
+					Vestibulum quis risus sed lacus luctus iaculis. Proin dignissim rhoncus est, at mollis sapien viverra quis. Pellentesque eleifend fermentum sollicitudin. Pellentesque dictum pharetra justo vitae sagittis. Morbi pulvinar eget turpis eu egestas.</p>
+				</section>
+				<article>
+					<img id="kidpic" src="iCode-kid.jpg" alt="Picture of a kid on a computer"> 
+					<h3>This is an Article</h3>
+					<p>Sed quis aliquam quam. Vivamus semper tempus luctus. Aliquam a cursus risus, a posuere arcu. Vivamus semper aliquet felis, eget pharetra orci venenatis nec. Integer sed nunc vitae sem tempus posuere ut non diam. Etiam vel arcu ac mauris pretium euismod at vel orci.
+
+					Proin ac sem ultricies nibh blandit ultricies ut vel sapien. Cras leo mi, bibendum ut mauris vel, feugiat elementum dui. Nulla ut sapien ac sem venenatis faucibus. Mauris id odio eu dolor lobortis scelerisque. Vestibulum auctor libero sapien, pharetra ornare turpis rutrum ac. Morbi pharetra pellentesque quam, a mattis mauris suscipit at. Etiam elit tortor, viverra id vestibulum sit amet, condimentum non est. Nam maximus accumsan mauris, nec aliquam erat aliquet in. Cras rutrum ex sapien, commodo aliquam nunc auctor a. Aenean sagittis placerat orci non volutpat. Pellentesque egestas est eget justo gravida varius.
+
+					Donec est leo, facilisis non tincidunt vitae, semper vitae ligula. Ut luctus enim id dui efficitur, et hendrerit purus porttitor. Vestibulum consequat in erat nec pharetra. Duis sagittis mattis leo vitae eleifend. Cras in mollis tellus, ac tempus magna. Donec faucibus faucibus est sit amet sollicitudin. Curabitur venenatis ligula non vehicula pellentesque. Nunc aliquet imperdiet ornare. Vestibulum nisi quam, euismod vitae ante fermentum, bibendum posuere diam. Fusce fermentum rutrum augue. Nullam feugiat in nisi eu sollicitudin. Vivamus nec elit tincidunt, posuere arcu ut, egestas lectus. Ut pellentesque tellus id dignissim malesuada. Phasellus justo neque, maximus tincidunt justo ut, posuere sodales felis. Sed eget sapien pharetra, faucibus nisi sit amet, consequat neque. Ut vitae odio diam.</p>
+				</article>
+			</div>
+		</div>
+		<footer>
+			<p class="footer-p">Posted by: Alejandro Vega</p>
+ 			<p class="footer-p">Contact information: <a id="footer-email"href="mailto:alejandro.vega@icodeschool.com">alejandro.vega@icodeschool.com</a>.</p>
+		</footer>
 	</body>
 </html>
