Changed Text in paragraphs

--- a/first-page.html
+++ b/first-page.html
@@ -19,7 +19,7 @@
 		<div id="body-wrapper">
 			<div id="main">
 				<aside>
-				<h4>This goes to the right</h4>
+				    <h4>This goes to the right</h4>
 				</aside>
 				<section>
 					<h2 id="section-h2">This is my website</h2>
@@ -39,7 +39,7 @@
 			</div>
 		</div>
 		<footer>
-			<p class="footer-p">Posted by: Alejandro Vega</p>
+			<p class="footer-p">Created by: Alejandro Vega</p>
  			<p class="footer-p">Contact information: <a id="footer-email"href="mailto:alejandro.vega@icodeschool.com">alejandro.vega@icodeschool.com</a>.</p>
 		</footer>
 	</body>
