--- a/first-page.html
+++ b/first-page.html
@@ -3,29 +3,60 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>My Website</title>
-		<link rel="stylesheet" type="text/css" href="style.css"
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	</head>
 	<body>
 		<header>
-			<img id="iCodeLogo" src="iCode-logo.png">
+			<img id="iCodeLogo" src="iCode-logo.png" alt="home icon">
 			<nav>
+				<img id="homeIcon" src="home-icon.png">
 				<a href="#Home" class="nav-a">Home</a>
 				<a href="#About-Me" class="nav-a">About Me</a>
 				<a href="#Gallery" class="nav-a">Gallery</a>
 				<a href="#Contact-Us" class="nav-a">Contact Us</a>
 			</nav>
 		</header>
-		<hr>
 		<div id="body-wrapper">
 			<div id="main">
 				<aside>
-				<h4>This goes to the right</h4>
+				<h2>Courses</h4>
+				<h4 class="sprint">Sprint 1</h6>
+				<ul>
+					<li class="day"><a href="#">Day 1</a></li>
+					<li class="day"><a href="#">Day 2</a></li>
+					<li class="day"><a href="#">Day 3</a></li>
+					<li class="day"><a href="#">Day 4</a></li>
+					<li class="day"><a href="#">Day 5</a></li>
+					<li class="day"><a href="#">Day 6</a></li>
+				</ul>
+				<hr>
+				<h4 class="sprint">Sprint 2</h6>
+				<ul>
+					<li class="day"><a href="#">Day 1</a></li>
+					<li class="day"><a href="#">Day 2</a></li>
+					<li class="day"><a href="#">Day 3</a></li>
+					<li class="day"><a href="#">Day 4</a></li>
+					<li class="day"><a href="#">Day 5</a></li>
+					<li class="day"><a href="#">Day 6</a></li>
+				</ul>
+				<hr>
+				<h4 class="sprint">Sprint 3</h6>
+				<ul>
+					<li class="day"><a href="#">Day 1</a></li>
+					<li class="day"><a href="#">Day 2</a></li>
+					<li class="day"><a href="#">Day 3</a></li>
+					<li class="day"><a href="#">Day 4</a></li>
+					<li class="day"><a href="#">Day 5</a></li>
+					<li class="day"><a href="#">Day 6</a></li>
+				</ul>
+				<hr>
 				</aside>
 				<section>
-					<h2 id="section-h2">This is my website</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum vulputate sapien in aliquet. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis in velit eget sem imperdiet gravida. Nam vestibulum porta euismod. Maecenas sit amet dui tristique, posuere sapien vitae, semper eros. In ut consectetur urna, et porttitor urna. Mauris malesuada nulla id sagittis aliquet. Nullam turpis velit, egestas sit amet sem in, pellentesque tincidunt dui. In a semper risus. Phasellus nec libero massa.
-
-					Vestibulum quis risus sed lacus luctus iaculis. Proin dignissim rhoncus est, at mollis sapien viverra quis. Pellentesque eleifend fermentum sollicitudin. Pellentesque dictum pharetra justo vitae sagittis. Morbi pulvinar eget turpis eu egestas.</p>
+					<img id="obLogo" src="orange-belt-2.png">
+					<h2 id="section-h2">Orange Belt</h2>
+					<p id="ob-motto">Enriching the mind through concepts in coding and design</p>
+					<hr>
 				</section>
 				<article>
 					<img id="kidpic" src="iCode-kid.jpg" alt="Picture of a kid on a computer"> 
